syntax = "proto3";
service DataService {
    rpc GetCommentsData (GetCommentsDataRequest) returns (GetCommentsDataReply) {}
  }


  message GetCommentsDataRequest {
    string apm_trace_parent_id = 1;
  }


  message GetCommentsDataReply {
    string data = 1;
  }
